--- a/Coldigo Geladeiras/index.html
+++ b/Coldigo Geladeiras/index.html
@@ -7,11 +7,10 @@
     <meta name="author" content="Escola sistêmatica">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coldigo geladeiras</title>
-    <link rel="stylesheet" href="css/site.css">
-    <link rel="stylesheet" href="js/site.js">
-    <script 
-        src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
-    </script>
+     <link rel="stylesheet" href="css/site.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="js/site.js"></script>
+
 </head>
 <body>
     <header>
