--- a/Coldigo Geladeiras/pages/admin/index.html
+++ b/Coldigo Geladeiras/pages/admin/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Coldigo Geladeiras/css/admin.css">
-    <link rel="stylesheet" href="/Coldigo Geladeiras/js/admin.js">
+    <link rel="stylesheet" href="/css/admin.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="js/admin.js">
     <title>Document</title>
 </head>
 <body>
