--- a/Coldigo Geladeiras/pages/index.html
+++ b/Coldigo Geladeiras/pages/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/admin.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="js/admin.js">
-    <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="/js/admin.js"></script>
+    <title>ADM</title>
 </head>
 <body>
     <header></header>
