--- a/Coldigo Geladeiras/pages/header.html
+++ b/Coldigo Geladeiras/pages/header.html
@@ -1,4 +1,4 @@
-<img src="/Coldigo Geladeiras/imgs/logo.png" alt="">
+<img src="/imgs/logo.png" alt="">
 <h1>Coldigo Geladeiras - ADIMINISTRAÇÃO</h1>
 <nav>
     <div class="opcao dropdown">
